--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <script>
     // Configuration Firebase
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+  apiKey: "AIzaSyAibnn0YMMiEM0mJfOQRJ_8taGZ4IqgxR0",
+  authDomain: "audiominecraftentertainment.firebaseapp.com",
+  databaseURL: "https://audiominecraftentertainment-default-rtdb.firebaseio.com",
+  projectId: "audiominecraftentertainment",
+  storageBucket: "audiominecraftentertainment.firebasestorage.app",
+  messagingSenderId: "557660028873",
+  appId: "1:557660028873:web:29f9295c7f2bf0506fb218",
+};
     firebase.initializeApp(firebaseConfig);
 
     const audio = document.getElementById("audio");
@@ -57,3 +57,4 @@
   </script>
 </body>
 </html>
+
