--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Bienvenue au spectacle 🎧</h1>
   <button id="enableBtn">Activer le son</button>
-  <audio id="audio" src="audio.mp3"></audio>
+  <audio id="audio" src="spectacle.mp3"></audio>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -57,4 +57,5 @@
   </script>
 </body>
 </html>
+
 
