--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 <body>
   <h1>Bienvenue au spectacle 🎧</h1>
   <button id="enableBtn">Activer le son</button>
-  <audio id="audio" src="spectacle.mp3"></audio>
+  <audio id="audio" src="spectacle.mp3" preload="auto"></audio>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script>
     // Configuration Firebase
     const firebaseConfig = {
-  apiKey: "AIzaSyAibnn0YMMiEM0mJfOQRJ_8taGZ4IqgxR0",
-  authDomain: "audiominecraftentertainment.firebaseapp.com",
-  databaseURL: "https://audiominecraftentertainment-default-rtdb.firebaseio.com",
-  projectId: "audiominecraftentertainment",
-  storageBucket: "audiominecraftentertainment.firebasestorage.app",
-  messagingSenderId: "557660028873",
-  appId: "1:557660028873:web:29f9295c7f2bf0506fb218",
-};
+      apiKey: "AIzaSyAibnn0YMMiEM0mJfOQRJ_8taGZ4IqgxR0",
+      authDomain: "audiominecraftentertainment.firebaseapp.com",
+      databaseURL: "https://audiominecraftentertainment-default-rtdb.firebaseio.com",
+      projectId: "audiominecraftentertainment",
+      storageBucket: "audiominecraftentertainment.firebasestorage.app",
+      messagingSenderId: "557660028873",
+      appId: "1:557660028873:web:29f9295c7f2bf0506fb218"
+    };
     firebase.initializeApp(firebaseConfig);
 
     const audio = document.getElementById("audio");
@@ -29,6 +29,7 @@
     let audioEnabled = false;
 
     enableBtn.addEventListener("click", () => {
+      audio.load(); // Recharge le fichier
       audio.play().then(() => {
         audio.pause(); // Prépare le son
         audioEnabled = true;
@@ -43,19 +44,19 @@
     firebase.database().ref("show").on("value", (snapshot) => {
       const data = snapshot.val();
       if (data && data.play && audioEnabled) {
-        audio.play().catch((error) => {
+        audio.load(); // Recharge le fichier
+        audio.play().then(() => {
+          console.log("Son lancé !");
+          setTimeout(() => {
+            firebase.database().ref("show").set({ play: false }).catch((error) => {
+              console.error("Impossible de réinitialiser la valeur :", error);
+            });
+          }, 1000); // Attendre 1 seconde avant de réinitialiser
+        }).catch((error) => {
           console.error("Impossible de jouer le son :", error);
         });
-
-        audio.onplaying = () => {
-          firebase.database().ref("show").set({ play: false }).catch((error) => {
-            console.error("Impossible de réinitialiser la valeur :", error);
-          });
-        };
       }
     });
   </script>
 </body>
 </html>
-
-
