--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       authDomain: "audiominecraftentertainment.firebaseapp.com",
       databaseURL: "https://audiominecraftentertainment-default-rtdb.firebaseio.com",
       projectId: "audiominecraftentertainment",
-      storageBucket: "audiominecraftentertainment.firebasestorage.app",
+      storageBucket: "audiominecraftentertainment.appspot.com",
       messagingSenderId: "557660028873",
       appId: "1:557660028873:web:29f9295c7f2bf0506fb218"
     };
@@ -29,29 +29,23 @@
     let audioEnabled = false;
 
     enableBtn.addEventListener("click", () => {
-      audio.load(); // Recharge le fichier
-      audio.play().then(() => {
-        audio.pause(); // Prépare le son
-        audioEnabled = true;
-        enableBtn.disabled = true;
-        enableBtn.textContent = "Son activé ✅";
-      }).catch((error) => {
-        console.error("Erreur de lecture audio :", error);
-        alert("Veuillez autoriser le son dans votre navigateur.");
-      });
+      audioEnabled = true;
+      enableBtn.disabled = true;
+      enableBtn.textContent = "Son activé ✅";
+      alert("Le son est activé. Attendez le signal du staff.");
     });
 
     firebase.database().ref("show").on("value", (snapshot) => {
       const data = snapshot.val();
       if (data && data.play && audioEnabled) {
-        audio.load(); // Recharge le fichier
+        audio.currentTime = 0; // Repart du début
         audio.play().then(() => {
           console.log("Son lancé !");
           setTimeout(() => {
             firebase.database().ref("show").set({ play: false }).catch((error) => {
               console.error("Impossible de réinitialiser la valeur :", error);
             });
-          }, 1000); // Attendre 1 seconde avant de réinitialiser
+          }, 1000);
         }).catch((error) => {
           console.error("Impossible de jouer le son :", error);
         });
