--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('logo.png'); /* Image de fond */
+      background-image: url('logo.PNG'); /* Image de fond */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -80,3 +80,4 @@
   </script>
 </body>
 </html>
+
