--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>Spectacle Audio</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
       background-image: url('logo.PNG'); /* Image de fond */
       background-size: cover;
       background-position: center;
@@ -14,19 +15,37 @@
       background-attachment: fixed;
       font-family: sans-serif;
       color: white;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
     }
 
-    h1, button {
+    h1 {
       background-color: rgba(0, 0, 0, 0.6); /* Pour lisibilité sur fond */
-      padding: 10px;
+      padding: 10px 20px;
       border-radius: 8px;
-      margin-top: 20px;
+      margin-bottom: 20px;
+      font-size: 24px;
     }
 
     button {
-      cursor: pointer;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 10px 20px;
+      border-radius: 8px;
       font-size: 16px;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: rgba(0, 0, 0, 0.8);
     }
   </style>
 </head>
@@ -80,4 +99,3 @@
   </script>
 </body>
 </html>
-
