--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     }
 
     h1 {
-      background-color: rgba(0, 0, 0, 0.6); /* Pour lisibilité sur fond */
+      background-color: rgba(0, 0, 0, 0.6);
       padding: 10px 20px;
       border-radius: 8px;
       margin-bottom: 20px;
