--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     body {
       margin: 0;
       padding: 0;
+      min-height: 100vh;
       background-image: url('logo.PNG');
       background-size: cover;
       background-position: center;
@@ -14,37 +15,46 @@
       background-attachment: fixed;
       font-family: sans-serif;
       color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .container {
+      margin-top: 80px;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px 30px;
+      border-radius: 12px;
       text-align: center;
     }
 
     h1 {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 10px 20px;
-      border-radius: 8px;
-      margin-top: 40px;
-      font-size: 24px;
+      font-size: 28px;
+      margin-bottom: 20px;
     }
 
-    #enableBtn {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-size: 16px;
+    button {
+      background-color: rgba(255, 255, 255, 0.2);
       color: white;
       border: none;
+      padding: 12px 24px;
+      font-size: 16px;
+      border-radius: 8px;
       cursor: pointer;
-      margin-top: 150px; /* Décalage vertical important */
       transition: background-color 0.3s ease;
     }
 
-    #enableBtn:hover {
-      background-color: rgba(0, 0, 0, 0.8);
+    button:hover {
+      background-color: rgba(255, 255, 255, 0.4);
     }
   </style>
 </head>
 <body>
-  <h1>Bienvenue au spectacle 🎧</h1>
-  <button id="enableBtn">Activer le son</button>
+  <div class="container">
+    <h1>Bienvenue au spectacle 🎧</h1>
+    <button id="enableBtn">Activer le son</button>
+  </div>
+
   <audio id="audio" src="spectacle.mp3" preload="auto"></audio>
 
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
