--- a/staff.html
+++ b/staff.html
@@ -12,13 +12,13 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
   <script>
-    // Configuration Firebase
+    // Configuration Firebase (corrigée)
     const firebaseConfig = {
       apiKey: "AIzaSyAibnn0YMMiEM0mJfOQRJ_8taGZ4IqgxR0",
       authDomain: "audiominecraftentertainment.firebaseapp.com",
       databaseURL: "https://audiominecraftentertainment-default-rtdb.firebaseio.com",
       projectId: "audiominecraftentertainment",
-      storageBucket: "audiominecraftentertainment.firebasestorage.app",
+      storageBucket: "audiominecraftentertainment.appspot.com", // ← corrigé ici
       messagingSenderId: "557660028873",
       appId: "1:557660028873:web:29f9295c7f2bf0506fb218"
     };
