--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAibnn0YMMiEM0mJfOQRJ_8taGZ4IqgxR0",
-      authDomain: "audiominecraftentertainment.firebaseapp.com",
-      databaseURL: "https://audiominecraftentertainment-default-rtdb.firebaseio.com",
-      projectId: "audiominecraftentertainment",
-      storageBucket: "audiominecraftentertainment.appspot.com",
-      messagingSenderId: "557660028873",
-      appId: "1:557660028873:web:29f9295c7f2bf0506fb218"
-    };
+   const firebaseConfig = {
+  apiKey: "AIzaSyAibnn8YMMiEM0mJfOQRJ_8taGZ4IqbvXR0",
+  authDomain: "audiominecraftentertainment.firebaseapp.com",
+  projectId: "audiominecraftentertainment",
+  storageBucket: "audiominecraftentertainment.appspot.com",
+  messagingSenderId: "557660028873",
+  appId: "1:557660028873:web:29f9295cf72fb0f506fb218",
+  measurementId: "G-HFQ98YBQS8"
+};
     firebase.initializeApp(firebaseConfig);
 
     const audio = document.getElementById("audio");
@@ -126,3 +126,4 @@
   </script>
 </body>
 </html>
+
