--- a/staff.html
+++ b/staff.html
@@ -14,14 +14,14 @@
   <script>
     // Configuration Firebase (corrigée)
     const firebaseConfig = {
-      apiKey: "AIzaSyAibnn0YMMiEM0mJfOQRJ_8taGZ4IqgxR0",
-      authDomain: "audiominecraftentertainment.firebaseapp.com",
-      databaseURL: "https://audiominecraftentertainment-default-rtdb.firebaseio.com",
-      projectId: "audiominecraftentertainment",
-      storageBucket: "audiominecraftentertainment.appspot.com", // ← corrigé ici
-      messagingSenderId: "557660028873",
-      appId: "1:557660028873:web:29f9295c7f2bf0506fb218"
-    };
+  apiKey: "AIzaSyAibnn8YMMiEM0mJfOQRJ_8taGZ4IqbvXR0",
+  authDomain: "audiominecraftentertainment.firebaseapp.com",
+  projectId: "audiominecraftentertainment",
+  storageBucket: "audiominecraftentertainment.appspot.com",
+  messagingSenderId: "557660028873",
+  appId: "1:557660028873:web:29f9295cf72fb0f506fb218",
+  measurementId: "G-HFQ98YBQS8"
+};
 
     // Initialisation Firebase
     firebase.initializeApp(firebaseConfig);
