--- a/staff.html
+++ b/staff.html
@@ -12,23 +12,24 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
   <script>
-    // Configuration Firebase (corrigée)
+    // Configuration Firebase
     const firebaseConfig = {
-  apiKey: "AIzaSyAibnn8YMMiEM0mJfOQRJ_8taGZ4IqbvXR0",
-  authDomain: "audiominecraftentertainment.firebaseapp.com",
-  projectId: "audiominecraftentertainment",
-  storageBucket: "audiominecraftentertainment.appspot.com",
-  messagingSenderId: "557660028873",
-  appId: "1:557660028873:web:29f9295cf72fb0f506fb218",
-  measurementId: "G-HFQ98YBQS8"
-};
+      apiKey: "AIzaSyAibnn8YMMiEM0mJfOQRJ_8taGZ4IqbvXR0",
+      authDomain: "audiominecraftentertainment.firebaseapp.com",
+      projectId: "audiominecraftentertainment",
+      storageBucket: "audiominecraftentertainment.appspot.com",
+      messagingSenderId: "557660028873",
+      appId: "1:557660028873:web:29f9295cf72fb0f506fb218",
+      measurementId: "G-HFQ98YBQS8"
+    };
 
     // Initialisation Firebase
     firebase.initializeApp(firebaseConfig);
 
     function startShow() {
       const db = firebase.database();
-      db.ref("show").set({ play: true })
+      const timestamp = Date.now(); // Horodatage en millisecondes
+      db.ref("show").set({ startTime: timestamp })
         .then(() => {
           alert("Signal envoyé 🎉");
         })
